--- a/src/app/component/exam/exam.component.html
+++ b/src/app/component/exam/exam.component.html
@@ -6,7 +6,7 @@
         style="background-image: url(../../assets/login/images/bg-01.jpg);"
       >
         <span class="login100-form-title-1">
-          {{ exam.title }}
+          <img width="50%" src="../../assets/images/logo/text-logo-white.png" />
         </span>
       </div>
 
