--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -238,13 +238,13 @@
                 : false
             "
           >
-            Регистрация
+            Регистрирай
           </button>
           <button
             class="btn btn-block btn-success text-white ml-3"
             (click)="switchForm()"
           >
-            Вход
+            Назад
           </button>
           <button
             class="btn btn-block btn-warning text-white ml-3"
