--- a/src/app/component/add-exam/add-exam.component.html
+++ b/src/app/component/add-exam/add-exam.component.html
@@ -25,14 +25,13 @@
     </div>
   </div>
 
-  <!-- <div class="wrap-input100 validate-input m-b-18">
+  <div class="wrap-input100 validate-input m-b-18">
     <span class="label-input100">Брой въпроси</span>
     <input
       class="input100"
       type="number"
       name="countQuestions"
       required
-      disabled
       #countQuestions="ngModel"
       [(ngModel)]="model.countQuestions"
       value="{{ model.questions ? model.questions.length : 0 }}"
@@ -50,7 +49,7 @@
         Полето е задължително
       </div>
     </div>
-  </div> -->
+  </div>
 
   <div class="wrap-input100 validate-input m-b-18">
     <span class="label-input100">Време (минути)</span>
